# EUBW-Researcher

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: full-tests.yml  tests.yml
configs/: evaluation_scenarios.yaml  evaluation_scenarios_real_corpus.yaml  real_corpus_selection.yaml  real_question_pack.yaml  retrieval_usefulness_cases.yaml  runtime.scan.yaml  runtime.sqlite_fts.yaml  runtime.yaml  source_hierarchy.yaml  terminology.yaml  web_allowlist.yaml
docs/architecture/: MASTERPLAN.md  OPTIONS_COMPARISON.md  REQUIREMENTS_PATCHES.md  REVIEW_RUBRIC.md  VARIANT_SCOPING.md
docs/requirements/: EUBW_RESEARCH_ASSISTANT_ELICITATION_SUMMARY.md  EUBW_RESEARCH_ASSISTANT_REQUIREMENTS_BASIS.md  REQUIREMENTS_FACILITATION_GUIDE.md  REQUIREMENTS_FACILITATION_REVIEW.md
scripts/: _catalog_path.py  _test_runner.py  agent_answer_question.py  agent_run_eval.py  answer_question.py  build_real_corpus_catalog.py  ingest_sample_corpus.py  refresh_real_corpus.py  report_corpus_state.py  report_validated_current_state.py  route_pr_test_suites.py  run_closeout_tests.py  run_eval.py  run_integration_tests.py  run_real_question_pack.py  run_retrieval_backend_comparison.py  run_scenario_d_closeout.py  run_spawned_validator_gate.py  run_tests.py  run_unit_tests.py  update_terminology_from_corpus.py
src/eubw_researcher/: __init__.py  agent_runtime.py  ci_test_routing.py  pipeline.py  runtime_facade.py  trust.py
tests/integration/: test_agent_runtime.py  test_pipeline_and_eval.py
tests/unit/: test_agent_runtime.py  (+25 more)
tests_closeout/: test_scenario_d_closeout.py
(+131 files in other folders)
