[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eubw-researcher"
version = "0.1.0"
description = "Evidence-first research assistant prototype for EU Business Wallet questions"
requires-python = ">=3.9"
dependencies = ["pypdf>=6.9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
